--- a/package.json
+++ b/package.json
@@ -1,49 +1,35 @@
+
 {
-  "name": "pakistanfintechapp",
-  "main": "expo-router/entry",
+  "name": "PakistanFintechApp",
   "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "lint": "expo lint"
+  "start": "expo start",
+  "android": "expo start --android",
+  "ios": "expo start --ios",
+  "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
-    "@react-navigation/bottom-tabs": "^7.3.10",
-    "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
-    "expo": "~53.0.20",
-    "expo-blur": "~14.1.5",
-    "expo-constants": "~17.1.7",
-    "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.0",
-    "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.4",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
-    "expo-web-browser": "~14.2.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+  "expo": "~49.0.0",
+  "expo-status-bar": "~1.6.0",
+  "react": "18.2.0",
+  "react-native": "0.72.6",
+  "@react-navigation/native": "^6.1.9",
+  "@react-navigation/native-stack": "^6.9.17",
+  "react-native-screens": "~3.25.0",
+  "react-native-safe-area-context": "4.6.3",
+  "expo-secure-store": "~12.3.1",
+  "expo-camera": "~13.4.4",
+  "axios": "^1.6.2",
+  "react-native-paper": "^5.11.3",
+  "react-native-vector-icons": "^10.0.2",
+  "@react-native-async-storage/async-storage": "1.18.2",
+  "react-i18next": "^13.5.0",
+  "i18next": "^23.7.6",
+  "react-native-reanimated": "~3.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3",
-    "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0"
+  "@babel/core": "^7.20.0"
   },
   "private": true
-}
+  }
