--- a/package.json
+++ b/package.json
@@ -1,35 +1,40 @@
-
 {
   "name": "PakistanFintechApp",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-  "start": "expo start",
-  "android": "expo start --android",
-  "ios": "expo start --ios",
-  "web": "expo start --web"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-  "expo": "~49.0.0",
-  "expo-status-bar": "~1.6.0",
-  "react": "18.2.0",
-  "react-native": "0.72.6",
-  "@react-navigation/native": "^6.1.9",
-  "@react-navigation/native-stack": "^6.9.17",
-  "react-native-screens": "~3.25.0",
-  "react-native-safe-area-context": "4.6.3",
-  "expo-secure-store": "~12.3.1",
-  "expo-camera": "~13.4.4",
-  "axios": "^1.6.2",
-  "react-native-paper": "^5.11.3",
-  "react-native-vector-icons": "^10.0.2",
-  "@react-native-async-storage/async-storage": "1.18.2",
-  "react-i18next": "^13.5.0",
-  "i18next": "^23.7.6",
-  "react-native-reanimated": "~3.3.0"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.3",
+    "expo": "~53.0.0",
+    "expo-camera": "~16.1.11",
+    "expo-router": "~5.1.4",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "i18next": "^23.14.0",
+    "intl-pluralrules": "^2.0.1",
+    "metro": "^0.82.0",
+    "react": "19.0.0",
+    "react-i18next": "^15.0.0",
+    "react-native": "0.79.5",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
-  "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.0",
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "private": true
-  }
+}
